--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
+    "vue-awesome": "^4.1.0",
     "vuelidate": "^0.7.6"
   },
   "devDependencies": {
