use my image khoahua/yiv-nuxtjs:2.0

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   nuxt:
-    build: .
+    image: khoahua/yiv-nuxtjs:2.0
     container_name: nuxt
     restart: always
     env_file: .env
