--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,32 @@
-name: Publish Docker image
+name: ci
+
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches: main
+
 jobs:
-  push_to_registry:
-    name: Push Docker image to Docker Hub
+  main:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v1
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: khoahua/yiv-nuxtjs
+      -
+        name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
           tags: khoahua/yiv-nuxtjs:$(date +%s)
-          tag_with_ref: true
+      -
+        name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
