--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,9 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: khoahua/yiv-nuxtjs:$(date +%s)
+          build-args: tag=$(date +%s)
+          tags: khoahua/yiv-nuxtjs:${{ tag }}
+         
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
