--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,18 @@
-name: ci
-
+name: Publish Docker image
 on:
-  push:
-    branches: main
-
+  release:
+    types: [published]
 jobs:
-  main:
+  push_to_registry:
+    name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1 
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      -
-        name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          build-args: tag=$(date +%s)
-          tags: khoahua/yiv-nuxtjs:${{ tag }}
-         
-      -
-        name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+          repository: khoahua/yiv-nuxtjs
+          tag_with_ref: true
