--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   nuxt:
-    image: khoahua/yiv-nuxtjs:2.0
+    image: khoahua/yiv-nuxtjs:main
     container_name: nuxt
     restart: always
     env_file: .env
