--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,11 @@
 name: Publish Docker image
 on:
   push:
-    branches: v3.0
+    branches:
+      - main
+    tags:
+      - v4.0
+  pull_request:
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
