--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -43,13 +43,14 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-2
+        aws-region: ap-southeast-1
 
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Update image
-      id: update-image
-      run:
+    - name: Deploy app
+      id: deploy-app
+      run: |
+        cd nuxtjs-docker
         docker-compose up --build --d
