--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -47,6 +47,6 @@ jobs:
 
     - name: Deploy app
       id: deploy-app
-      run:
+      run: |
         git pull
         docker-compose up --build --d
