--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Publish Docker image
 on:
   push:
-    branches:
-      - main
+    # branches:
+    #   - main
     tags:
       - '*'
   pull_request:
