--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -47,7 +47,5 @@ jobs:
 
     - name: Deploy app
       id: deploy-app
-      run: |
-        git checkout feature/docker
-        git pull origin feature/docker
+      run:
         docker-compose up --build --d
